# ecommerce-ui

./: Dockerfile  README.md  bun.lockb  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
app/: 404.tsx  globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/contact/: page.tsx
app/products/: page.tsx
app/products/[slug]/: page.tsx
app/robots.txt/: route.ts
app/sitemap.xml/: route.ts
components/: about-preview.tsx  auth.tsx  contact-cta.tsx  featured-products.tsx  footer.tsx  header.tsx  hero-section.tsx  mercado-pago-button.tsx
components/cart/: add-to-cart-button.tsx  card-sidebar.tsx  cart-context.tsx  cart-sheet.tsx  cart.tsx
components/products/: product-card.tsx  product-filters.tsx  product-grid.tsx
components/ui/: auth-form.tsx  auth-form.tsx.tsx  badge.tsx  customer.tsx  use-toast.ts  user-card.tsx
contexts/: AuthCartProvider.tsx  AuthContext.tsx  CartContext.tsx  CartProvider.tsx
hooks/: config.json  use-auth.ts  use-firestore.ts  use-storage.ts  use-toggle.ts
lib/: cart.ts  filter-products.ts  products.ts  utils.ts
styles/: globals.css
types/: cart.ts
